--- a/cemera-pwa/index.html
+++ b/cemera-pwa/index.html
@@ -25,6 +25,6 @@
     <button id="camera--trigger">tirar foto</button>
     <button id="camera--mudar">trocar camera</button>
   </main>
-  <script src="js/main.js" type="module"></script>
+  <script src="main.js" type="module"></script>
 </body>
 </html>
